--- a/index.html
+++ b/index.html
@@ -17,40 +17,170 @@
         </nav>
     </header>
     
+   
     <div class="products-container">
-        <div class="product-box">
-            <img src="images/shop.png" alt="High-quality rental product" class="product-icon">
-            <h2>Product 1</h2>
-            <p class="product-description">High-quality rental product.</p>
-            <div class="price">Price: CHF 10/day</div>
-            <div class="uses">Utilizzi: 1</div>
-            <a href="product1.html" class="rent-button">Rent Now</a>
-        </div>
-        <div class="product-box">
-            <img src="icon2.png" alt="Reliable and affordable product" class="product-icon">
-            <h2>Product 2</h2>
-            <p class="product-description">Reliable and affordable.</p>
-            <div class="price">Price: CHF 15/day</div>
-            <div class="uses">Utilizzi: 1</div>
-            <a href="product2.html" class="rent-button">Rent Now</a>
-        </div>
-        <div class="product-box">
-            <img src="icon3.png" alt="Perfect for your needs" class="product-icon">
-            <h2>Product 3</h2>
-            <p class="product-description">Perfect for your needs.</p>
-            <div class="price">Price: CHF 20/day</div>
-            <div class="uses">Utilizzi: 1</div>
-            <a href="product3.html" class="rent-button">Rent Now</a>
-        </div>
-        <div class="product-box">
-            <img src="icon4.png" alt="Great value and service" class="product-icon">
-            <h2>Product 4</h2>
-            <p class="product-description">Great value and service.</p>
-            <div class="price">Price: CHF 25/day</div>
-            <div class="uses">Utilizzi: 1</div>
-            <a href="product4.html" class="rent-button">Rent Now</a>
-        </div>
+    <div class="product-box">
+        <img src="images/shop.png" alt="High-quality rental product" class="product-icon">
+        <h2>Product 1</h2>
+        <p class="product-description">High-quality rental product.</p>
+        <div class="price">Price: CHF 10/day</div>
+        <div class="uses">Utilizzi: 1</div>
+        <a href="product1.html" class="rent-button">Rent Now</a>
     </div>
+    <div class="product-box">
+        <img src="images/shop.png" alt="Reliable and affordable product" class="product-icon">
+        <h2>Product 2</h2>
+        <p class="product-description">Reliable and affordable.</p>
+        <div class="price">Price: CHF 15/day</div>
+        <div class="uses">Utilizzi: 1</div>
+        <a href="product2.html" class="rent-button">Rent Now</a>
+    </div>
+    <div class="product-box">
+        <img src="images/shop.png" alt="Perfect for your needs" class="product-icon">
+        <h2>Product 3</h2>
+        <p class="product-description">Perfect for your needs.</p>
+        <div class="price">Price: CHF 20/day</div>
+        <div class="uses">Utilizzi: 1</div>
+        <a href="product3.html" class="rent-button">Rent Now</a>
+    </div>
+    <div class="product-box">
+        <img src="images/shop.png" alt="Great value and service" class="product-icon">
+        <h2>Product 4</h2>
+        <p class="product-description">Great value and service.</p>
+        <div class="price">Price: CHF 25/day</div>
+        <div class="uses">Utilizzi: 1</div>
+        <a href="product4.html" class="rent-button">Rent Now</a>
+    </div>
+    <div class="product-box">
+        <img src="images/shop.png" alt="Top-notch quality" class="product-icon">
+        <h2>Product 5</h2>
+        <p class="product-description">Top-notch quality for any occasion.</p>
+        <div class="price">Price: CHF 30/day</div>
+        <div class="uses">Utilizzi: 1</div>
+        <a href="product5.html" class="rent-button">Rent Now</a>
+    </div>
+    <div class="product-box">
+        <img src="images/shop.png" alt="Innovative design" class="product-icon">
+        <h2>Product 6</h2>
+        <p class="product-description">Innovative design to meet your needs.</p>
+        <div class="price">Price: CHF 12/day</div>
+        <div class="uses">Utilizzi: 1</div>
+        <a href="product6.html" class="rent-button">Rent Now</a>
+    </div>
+    <div class="product-box">
+        <img src="images/shop.png" alt="Durable and long-lasting" class="product-icon">
+        <h2>Product 7</h2>
+        <p class="product-description">Durable and long-lasting for all uses.</p>
+        <div class="price">Price: CHF 18/day</div>
+        <div class="uses">Utilizzi: 1</div>
+        <a href="product7.html" class="rent-button">Rent Now</a>
+    </div>
+    <div class="product-box">
+        <img src="images/shop.png" alt="Convenient and easy to use" class="product-icon">
+        <h2>Product 8</h2>
+        <p class="product-description">Convenient and easy to use.</p>
+        <div class="price">Price: CHF 22/day</div>
+        <div class="uses">Utilizzi: 1</div>
+        <a href="product8.html" class="rent-button">Rent Now</a>
+    </div>
+    <div class="product-box">
+        <img src="images/shop.png" alt="Versatile and adaptable" class="product-icon">
+        <h2>Product 9</h2>
+        <p class="product-description">Versatile and adaptable for various tasks.</p>
+        <div class="price">Price: CHF 14/day</div>
+        <div class="uses">Utilizzi: 1</div>
+        <a href="product9.html" class="rent-button">Rent Now</a>
+    </div>
+    <div class="product-box">
+        <img src="images/shop.png" alt="Excellent customer reviews" class="product-icon">
+        <h2>Product 10</h2>
+        <p class="product-description">Excellent customer reviews and satisfaction.</p>
+        <div class="price">Price: CHF 16/day</div>
+        <div class="uses">Utilizzi: 1</div>
+        <a href="product10.html" class="rent-button">Rent Now</a>
+    </div>
+    <div class="product-box">
+        <img src="images/shop.png" alt="Eco-friendly option" class="product-icon">
+        <h2>Product 11</h2>
+        <p class="product-description">Eco-friendly option for sustainable choices.</p>
+        <div class="price">Price: CHF 27/day</div>
+        <div class="uses">Utilizzi: 1</div>
+        <a href="product11.html" class="rent-button">Rent Now</a>
+    </div>
+    <div class="product-box">
+        <img src="images/shop.png" alt="User-friendly interface" class="product-icon">
+        <h2>Product 12</h2>
+        <p class="product-description">User-friendly interface and features.</p>
+        <div class="price">Price: CHF 19/day</div>
+        <div class="uses">Utilizzi: 1</div>
+        <a href="product12.html" class="rent-button">Rent Now</a>
+    </div>
+    <div class="product-box">
+        <img src="images/shop.png" alt="Affordable luxury" class="product-icon">
+        <h2>Product 13</h2>
+        <p class="product-description">Affordable luxury for special occasions.</p>
+        <div class="price">Price: CHF 35/day</div>
+        <div class="uses">Utilizzi: 1</div>
+        <a href="product13.html" class="rent-button">Rent Now</a>
+    </div>
+    <div class="product-box">
+        <img src="images/shop.png" alt="Safety and reliability" class="product-icon">
+        <h2>Product 14</h2>
+        <p class="product-description">Safety and reliability guaranteed.</p>
+        <div class="price">Price: CHF 11/day</div>
+        <div class="uses">Utilizzi: 1</div>
+        <a href="product14.html" class="rent-button">Rent Now</a>
+    </div>
+    <div class="product-box">
+        <img src="images/shop.png" alt="Compact and lightweight" class="product-icon">
+        <h2>Product 15</h2>
+        <p class="product-description">Compact and lightweight for easy transport.</p>
+        <div class="price">Price: CHF 23/day</div>
+        <div class="uses">Utilizzi: 1</div>
+        <a href="product15.html" class="rent-button">Rent Now</a>
+    </div>
+    <div class="product-box">
+        <img src="images/shop.png" alt="High performance" class="product-icon">
+        <h2>Product 16</h2>
+        <p class="product-description">High performance for demanding tasks.</p>
+        <div class="price">Price: CHF 28/day</div>
+        <div class="uses">Utilizzi: 1</div>
+        <a href="product16.html" class="rent-button">Rent Now</a>
+    </div>
+    <div class="product-box">
+        <img src="images/shop.png" alt="Perfect for families" class="product-icon">
+        <h2>Product 17</h2>
+        <p class="product-description">Perfect for families and group activities.</p>
+        <div class="price">Price: CHF 20/day</div>
+        <div class="uses">Utilizzi: 1</div>
+        <a href="product17.html" class="rent-button">Rent Now</a>
+    </div>
+    <div class="product-box">
+        <img src="images/shop.png" alt="Stylish and trendy" class="product-icon">
+        <h2>Product 18</h2>
+        <p class="product-description">Stylish and trendy for modern tastes.</p>
+        <div class="price">Price: CHF 24/day</div>
+        <div class="uses">Utilizzi: 1</div>
+        <a href="product18.html" class="rent-button">Rent Now</a>
+    </div>
+    <div class="product-box">
+        <img src="images/shop.png" alt="Customizable options" class="product-icon">
+        <h2>Product 19</h2>
+        <p class="product-description">Customizable options to fit your needs.</p>
+        <div class="price">Price: CHF 17/day</div>
+        <div class="uses">Utilizzi: 1</div>
+        <a href="product19.html" class="rent-button">Rent Now</a>
+    </div>
+    <div class="product-box">
+        <img src="images/shop.png" alt="Best-selling product" class="product-icon">
+        <h2>Product 20</h2>
+        <p class="product-description">Best-selling product with top ratings.</p>
+        <div class="price">Price: CHF 29/day</div>
+        <div class="uses">Utilizzi: 1</div>
+        <a href="product20.html" class="rent-button">Rent Now</a>
+    </div>
+</div>
+
 
     <footer class="footer">
     <div class="icon-container">
