--- a/index.html
+++ b/index.html
@@ -180,11 +180,31 @@
         </div>
     </div>
 
-    <footer class="footer">
-        <div class="orange-bar">
-            <p>Prices are subject to change.</p>
-        </div>
-    </footer>
+<footer class="footer">
+    <div class="orange-bar">
+    <div class="footer-icons">
+        <a href="home.html" class="footer-icon">
+            <img src="home.png" alt="Home">
+            <span class="icon-text">Home</span>
+        </a>
+        <a href="search.html" class="footer-icon">
+            <img src="search.png" alt="Search">
+            <span class="icon-text">Search</span>
+        </a>
+        <a href="create.html" class="footer-icon">
+            <img src="create.png" alt="Add">
+            <span class="icon-text">Add</span>
+        </a>
+        <a href="bank.html" class="footer-icon">
+            <img src="bank.png" alt="Bank">
+            <span class="icon-text">Bank</span>
+        </a>
+        <a href="account.html" class="footer-icon">
+            <img src="account.png" alt="Account">
+            <span class="icon-text">Account</span>
+        </a>
+    </div>
+</footer>
 
     <script src="script.js"></script>
 </body>
