--- a/index.html
+++ b/index.html
@@ -181,6 +181,7 @@
     </div>
 
 <footer class="footer">
+    <div class="orange-bar">
     <div class="footer-icons">
         <a href="home.html" class="footer-icon">
             <img src="home.png" alt="Home">
