--- a/index.html
+++ b/index.html
@@ -182,24 +182,26 @@
 
 <footer class="footer">
     <div class="orange-bar">
+        <p>Prices are subject to change.</p>
+    </div>
     <div class="footer-icons">
-        <a href="home.html" class="footer-icon">
-            <img src="images/home.png" alt="Home">
+        <a href="home.html" class="footer-icon nav-item nav-link active">
+            <img src="home.png" alt="Home">
             <span class="icon-text">Home</span>
         </a>
-        <a href="search.html" class="footer-icon">
+        <a href="search.html" class="footer-icon nav-item nav-link">
             <img src="search.png" alt="Search">
             <span class="icon-text">Search</span>
         </a>
-        <a href="create.html" class="footer-icon">
+        <a href="create.html" class="footer-icon nav-item nav-link">
             <img src="create.png" alt="Add">
             <span class="icon-text">Add</span>
         </a>
-        <a href="bank.html" class="footer-icon">
+        <a href="bank.html" class="footer-icon nav-item nav-link">
             <img src="bank.png" alt="Bank">
             <span class="icon-text">Bank</span>
         </a>
-        <a href="account.html" class="footer-icon">
+        <a href="account.html" class="footer-icon nav-item nav-link">
             <img src="account.png" alt="Account">
             <span class="icon-text">Account</span>
         </a>
