--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
     <div class="orange-bar">
     <div class="footer-icons">
         <a href="home.html" class="footer-icon nav-item nav-link active">
-            <img src="home.png" alt="Home">
+            <img src="images/home.png" alt="Home">
             <span class="icon-text">Home</span>
         </a>
         <a href="search.html" class="footer-icon nav-item nav-link">
