--- a/index.html
+++ b/index.html
@@ -185,26 +185,22 @@
     <div class="footer-icons">
         <a href="home.html" class="footer-icon nav-item nav-link active">
             <img src="images/home.png" alt="Home">
-            <span class="icon-text">Home</span>
         </a>
         <a href="search.html" class="footer-icon nav-item nav-link">
-            <img src="search.png" alt="Search">
-            <span class="icon-text">Search</span>
+            <img src="images/search.png" alt="Search">
         </a>
         <a href="create.html" class="footer-icon nav-item nav-link">
-            <img src="create.png" alt="Add">
-            <span class="icon-text">Add</span>
+            <img src="images/create.png" alt="Add">
         </a>
         <a href="bank.html" class="footer-icon nav-item nav-link">
-            <img src="bank.png" alt="Bank">
-            <span class="icon-text">Bank</span>
+            <img src="images/bank.png" alt="Bank">
         </a>
         <a href="account.html" class="footer-icon nav-item nav-link">
-            <img src="account.png" alt="Account">
-            <span class="icon-text">Account</span>
+            <img src="images/account.png" alt="Account">
         </a>
     </div>
 </footer>
+
 
     <script src="script.js"></script>
 </body>
