--- a/index.html
+++ b/index.html
@@ -182,22 +182,23 @@
 
 <footer class="footer">
     <div class="orange-bar">
-    <div class="footer-icons">
-        <a href="home.html" class="footer-icon nav-item nav-link active">
-            <img src="images/home.png" alt="Home">
-        </a>
-        <a href="search.html" class="footer-icon nav-item nav-link">
-            <img src="images/search.png" alt="Search">
-        </a>
-        <a href="create.html" class="footer-icon nav-item nav-link">
-            <img src="images/create.png" alt="Add">
-        </a>
-        <a href="bank.html" class="footer-icon nav-item nav-link">
-            <img src="images/bank.png" alt="Bank">
-        </a>
-        <a href="account.html" class="footer-icon nav-item nav-link">
-            <img src="images/account.png" alt="Account">
-        </a>
+        <div class="footer-icons">
+            <a href="home.html" class="footer-icon nav-item nav-link active">
+                <img src="images/home.png" alt="Home" class="footer-icon-img">
+            </a>
+            <a href="search.html" class="footer-icon nav-item nav-link">
+                <img src="images/search.png" alt="Search" class="footer-icon-img">
+            </a>
+            <a href="create.html" class="footer-icon nav-item nav-link">
+                <img src="images/create.png" alt="Add" class="footer-icon-img">
+            </a>
+            <a href="bank.html" class="footer-icon nav-item nav-link">
+                <img src="images/bank.png" alt="Bank" class="footer-icon-img">
+            </a>
+            <a href="account.html" class="footer-icon nav-item nav-link">
+                <img src="images/account.png" alt="Account" class="footer-icon-img">
+            </a>
+        </div>
     </div>
 </footer>
 
