--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                 <img src="images/bank.png" alt="Bank" class="footer-icon-img">
             </a>
             <a href="account.html" class="footer-icon nav-item nav-link">
-                <img src="images/account.png" alt="Account" class="footer-icon-img">
+                <img src="images/acccount.png" alt="Account" class="footer-icon-img">
             </a>
         </div>
     </div>
