--- a/index.html
+++ b/index.html
@@ -17,15 +17,21 @@
         </nav>
     </header>
 
-    <div class="products-container">
-        <div class="product-box">
-            <img src="images/shop.png" alt="High-quality rental product" class="product-icon">
-            <h2>Product 1</h2>
-            <p class="product-description">High-quality rental product.</p>
-            <div class="price">Price: CHF 10/day</div>
-            <div class="uses">Utilizzi: 1</div>
-            <a href="product1.html" class="rent-button">Rent Now</a>
+    <div class="card">
+        <div class="header">
+            <div class="profile-pic"></div>
+            <div class="username">Username</div>
+            <div class="follow-btn">+</div>
         </div>
+        <div class="photo-space">
+            <!-- Space for PNG photo -->
+        </div>
+        <div class="footer">
+            <div class="price">Price</div>
+            <div class="km">KM</div>
+            <div class="product-name">PRODOTTO</div>
+        </div>
+
         <div class="product-box">
             <img src="images/shop.png" alt="Reliable and affordable product" class="product-icon">
             <h2>Product 2</h2>
