--- a/index.html
+++ b/index.html
@@ -18,19 +18,19 @@
     </header>
 
     <div class="card">
-        <div class="header">
-            <div class="profile-pic"></div>
-            <div class="username">Username</div>
-            <div class="follow-btn">+</div>
-        </div>
-        <div class="photo-space">
-            <!-- Space for PNG photo -->
-        </div>
-        <div class="footer">
-            <div class="price">Price</div>
-            <div class="km">KM</div>
-            <div class="product-name">PRODOTTO</div>
-        </div>
+        <div class="profile-pic"></div>
+        <div class="username">Username</div>
+        <button class="follow-btn" aria-label="Follow User">+</button>
+    </div>
+    <div class="photo-space" aria-label="Product photo space">
+        <!-- Space for PNG photo -->
+    </div>
+    <div class="footer">
+        <div class="price">Price</div>
+        <div class="km">KM</div>
+        <div class="product-name">PRODOTTO</div>
+    </div>
+</div>
 
         <div class="product-box">
             <img src="images/shop.png" alt="Reliable and affordable product" class="product-icon">
