--- a/index.html
+++ b/index.html
@@ -17,21 +17,14 @@
         </nav>
     </header>
 
-    <div class="card">
-        <div class="profile-pic"></div>
-        <div class="username">Username</div>
-        <button class="follow-btn" aria-label="Follow User">+</button>
-    </div>
-    <div class="photo-space" aria-label="Product photo space">
-        <!-- Space for PNG photo -->
-    </div>
-    <div class="footer">
-        <div class="price">Price</div>
-        <div class="km">KM</div>
-        <div class="product-name">PRODOTTO</div>
-    </div>
-</div>
-
+    <div class="product-box">
+            <img src="images/shop.png" alt="Reliable and affordable product" class="product-icon">
+            <h2>Product 2</h2>
+            <p class="product-description">Reliable and affordable.</p>
+            <div class="price">Price: CHF 15/day</div>
+            <div class="uses">Utilizzi: 1</div>
+            <a href="product2.html" class="rent-button">Rent Now</a>
+        </div>
         <div class="product-box">
             <img src="images/shop.png" alt="Reliable and affordable product" class="product-icon">
             <h2>Product 2</h2>
