--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
 <footer class="footer">
     <div class="orange-bar">
         <div class="footer-icons">
-            <a href="home.html" class="footer-icon nav-item nav-link active">
+            <a href="index.html" class="footer-icon nav-item nav-link active">
                 <img src="images/home.png" alt="Home" class="footer-icon-img">
             </a>
             <a href="search.html" class="footer-icon nav-item nav-link">
