--- a/index.html
+++ b/index.html
@@ -21,9 +21,7 @@
             <img src="images/shop.png" alt="Reliable and affordable product" class="product-icon">
             <h2>Product 2</h2>
             <p class="product-description">Reliable and affordable.</p>
-            <div class="price">Price: CHF 15/day</div>
-            <div class="uses">Utilizzi: 1</div>
-            <a href="product2.html" class="rent-button">Rent Now</a>
+            <div class="price">CHF 15/day</div>
         </div>
         <div class="product-box">
             <img src="images/shop.png" alt="Reliable and affordable product" class="product-icon">
